# cozby-brain

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPT.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  release.sh  run-docker.sh  run.sh  start.sh
crates/actors/: Cargo.toml
crates/actors/src/: doc_actor.rs  learning_actor.rs  lib.rs  note_actor.rs  reminder_actor.rs  todo_actor.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  llm_use_cases.rs  ports.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  ical.rs  lib.rs  recurrence.rs  services.rs
crates/learning/: Cargo.toml
crates/learning/src/: lib.rs  llm_splitter.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  noop.rs  openai_compat.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: composite.rs  desktop_notifier.rs  lib.rs  log_notifier.rs  stdout_notifier.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: doc_repo.rs  learning_repo.rs  lib.rs  note_repo.rs  reminder_repo.rs  todo_repo.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_todos_reminders.sql  0003_learning.sql  0004_documentation.sql  0005_reminder_recurrence.sql
crates/server/src/: bootstrap.rs  config.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  noop.rs  s3_store.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  indicators.rs  main.rs  markdown.rs  theme.rs  views.rs
crates/vector/: Cargo.toml
crates/vector/src/: lib.rs  noop.rs  qdrant_store.rs
crates/web/: Cargo.toml
crates/web/src/: app_state.rs  doc_handlers.rs  dto.rs  handlers.rs  learning_handlers.rs  lib.rs  routes.rs
docs/: agent-design.md  apple-calendar-design.md
scripts/: e2e_docs.sh
