[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/persistence",
    "crates/actors",
    "crates/llm",
    "crates/vector",
    "crates/notifications",
    "crates/learning",
    "crates/storage",
    "crates/web",
    "crates/server",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
# `rustls-tls-native-roots` — подтягивает корневые CA из системного trust store
# (macOS Keychain, /etc/ssl/certs на Linux). Критично для окружений с корпоративным
# MitM-прокси (DP auth, tinkoff-bundle) — иначе TLS handshake падает.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
