[package]
name = "cb-application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain", package = "cb-domain" }
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
