[package]
name = "cozby-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cozby"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true

clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
colored = "2"
