[package]
name = "cb-learning"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
application = { path = "../application", package = "cb-application" }

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
