[package]
name = "cb-storage"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
application = { path = "../application", package = "cb-application" }

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
