[package]
name = "cb-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cozby-tui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true

ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
pulldown-cmark = { version = "0.12", default-features = false }
